@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST py3status-1.6.tar.gz 29900 SHA256 cecc0fb7a1cc7c6bfc4845417b652eeeb144232b07680fad3466d0f8737a9506 SHA512 bba9e7a016d41c1c82cdbed1fe7b2ee9fcf4492bac0551de66276f3925ffce74ffa12f563dc43683615bc442dde8ded74c0da4756bbf9af60b97b9dfa23b84d1 WHIRLPOOL c199301b01fbe392c3794bfc8cb76300667744a6513a95baab39720c0f5661fed89c23f64c66cb4ff42b0b8477793e1d7ee612a7e75cac180da8517f6acedb44
-DIST py3status-2.2.tar.gz 36721 SHA256 7ffbdc428f026652e7f5bee8302a5a4a42b04e25329ae051764bdf30998f381a SHA512 1a2d700bf040f5b309ad73d008bf4287068fddc42193a26c8462c08f33a67a64ed17f613b52e681d4f54f7a4149d0722737de28b712a22d43577ccfc8e20e302 WHIRLPOOL 65d22a51ace50080d15c15c4f3a8cff723aa210f57364aaa67cebfef278a98efb6615d1feddf34f62b9cbba3fac67994d8b02defafe846d04cf81b76686ffd16
-EBUILD py3status-1.6.ebuild 722 SHA256 199c30ae3392340a476a88d09fa969c23b168c232a1dda8f97f6fbd871e8204d SHA512 8d401a80221a78c86cfaae2df0e594d9b803af3bd947f68269d740f87c468c88f957521458dd0908065705e3de3a7210feb5400312d26ac40fe9a3f6c232d9df WHIRLPOOL 5ad27642c4d8bf6eec9e34cb5b112b9207309db50daeb721716b215bf8034727f44cb9a6e6ac95e8bca0141ef3f19c2409598c313fc128bae1a8e1fa0745803a
-EBUILD py3status-2.2.ebuild 722 SHA256 3a9ced97c888f7407e8f558067780643d075e3433e4b4552e3f6a38fd53e907d SHA512 f1f47abfdee93639aec6edc38a63e1405c850f32d9c11f0c4d13fa25b6e913a3fd2979b748d940d8957b0e729ca8e932114b68b4943f5889100ef3afbc5a23bf WHIRLPOOL 511c2dc2c1ff521fd13f0a52f2358a7577aba7f78f42734034692f864bdb6d855332105f5d2f24a9efb7b81fcc6f2cae53de275bd1caba901e5d4e1146d73954
-MISC ChangeLog 2016 SHA256 1901208608875945e6fce7df18a17f99282e86f0823eb860918a4c64441256e9 SHA512 e791f337ae1d800bb984f9963faf6d5f40e5529305b2833e2766a23b46059b51601107dc1381c1cf9d0073dd101826de6b0f42fc03efc6b6f0588d02ac0d5c84 WHIRLPOOL e9273dbba01298cfafd5c2a74b8299b335f342d0681a4478608b6e42918d3990b6119a18ec843cae3982c2e5368d9cea70ff5fec5afcf75ebcda9af98ce17b33
+DIST py3status-2.3.tar.gz 39924 SHA256 372ac406b1ed7dfef9bb96f280ea217516464fa82415500fc4b8a26d7f341f3f SHA512 0f46cd4394a9fd38d6036d774425a970a793aeb81a5160d9dd2622a00552baaa22316e005046d73879573b59e2b7497e9a925e6726d52c7d0b7502e47b42c9ca WHIRLPOOL 0f3ec1b35a9100d52d5b5c7a91471d1f2c048eea99b73369b97dcb0d149e5b42c350d04a8b84454cf03ada063d8a0d2a443647f798c4c57fc30883dd0605c004
+EBUILD py3status-2.3.ebuild 722 SHA256 14a1dcb6236ab8998efb644701a7a9c31d547e949703d63c30fa3c3fb72bbea2 SHA512 ed19d97e4a6341ce25a479768c70ad1155d488946fb5ab3083afe696fa6b64f10999c287cd8aa3428aac333251675b753694fe24c0fca6e2e0c11e8a74d541fb WHIRLPOOL bb2e7d4b137a24d5cce648794ef545d0661e322886108a7bb0424336f65c50493e7f0c94aa2b57a89283a784a2eaafd197ca3e96375f975af410d98c3fca3256
+MISC ChangeLog 2189 SHA256 31b29084312c185081ee6db3f433a7b22c1a8f23306660d3af9f1a9118d2c3b2 SHA512 ab2f2d7cf0b17592df3c77f996f85f258263590cf8a0475a7377b94dfe74b26a0f54f058a5503b784f188014ba588af365016f4fb900e84b8e2599575884d326 WHIRLPOOL dbd664c36f61c03b6c53e542a7a19b9adbcb3a63b00bfdfe3f7e216d75c63b957defb8a8a33e2fe81545b5a6caf189dc7eea1a2c8df9c1caa061a053906089aa
 MISC metadata.xml 414 SHA256 b4b2fc8efa142828bcbc195ef7cd35dd1544b914c6e188e4ebe2156d9513fdc2 SHA512 c7d22687cd069351d514c8a619018b9ab530a40763efbc81d419fd263b2e161f6f1fb2895ba91f4ca58eeefa07ef0114ec5d35b3ad2e9715fff00e5f4e5a82e3 WHIRLPOOL 3399801354b5df1dc0808f24f65811a55a4b56bc0c8792c2e57839936cfa8129a7fd33677c744c942e89cdf74c393a1c0ae8e0e7a74939cc81ba9a9de91a306e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlTCf7AACgkQKiQSS7ZY+hNi3AEAg5P5QD/jl0sH2PG6UNhG2KPU
-NELTchZhlk8+bTxioZMBAManvkPlAietXasKTyyh/ISZyslwFvR+Mv4YAEfUIR3J
-=uUqp
+iF4EAREIAAYFAlTjZZIACgkQKiQSS7ZY+hO42QD+M1OpGOpPXVXY+j9AH9MosOTu
+gP+SH2YPIwRjAQ0B43EA/2Utjlsw4lmSNs00mzw7hg9sLYsudFIZp63v+5Ki4Chh
+=7Rqr
 -----END PGP SIGNATURE-----
