@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/py3status/py3status-1.6.ebuild,v 1.1 2014/10/08 08:43:03 ultrabug Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/py3status/py3status-2.3.ebuild,v 1.1 2015/02/17 16:00:13 ultrabug Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python{2_6,2_7,3_2,3_3,3_4} )
