@@ -1,6 +1,12 @@
 # ChangeLog for x11-misc/py3status
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/py3status/ChangeLog,v 1.13 2015/01/23 17:06:51 ultrabug Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/py3status/ChangeLog,v 1.14 2015/02/17 16:00:13 ultrabug Exp $
+
+*py3status-2.3 (17 Feb 2015)
+
+  17 Feb 2015; Ultrabug <ultrabug@gentoo.org> -py3status-1.6.ebuild,
+  -py3status-2.2.ebuild, +py3status-2.3.ebuild:
+  version bump, drop old
 
 *py3status-2.2 (23 Jan 2015)
 
